# rust-test

./: .gitignore  Cargo.toml  README.md  build.rs  main  run.sh
.cargo/: config.toml
.devcontainer/: Dockerfile  Dockerfile.amd64  devcontainer.json
.devcontainer/cmd/: .bash  bash  prompt
src/: basic.rs  main.rs  string.rs  types.rs
src-asm/: test.s
src/functions/: base.rs  file.rs  mod.rs  read.rs  write.rs  write_arm_linux.s
src/functions/asm/: exit_amdl.s  exit_armx.s  write_arm_linux.s
src/functions/core/: exit_arml.s  read_arml.s  write_amdl.s  write_arml.s  write_armx.s
