[package]
name = "almost_metal"
version = "0.1.0"
edition = "2021"

[dependencies]
bare-metal = "1.0.0"

[lints.rust]
unexpected_cfgs = { level = "allow" }

[profile.dev]
panic = "abort"
codegen-units = 1
linker-flavor = "ld.lld"
opt-level = "z"
strip = true  # Automatically strip symbols from the binary.
lto = true

[profile.release]
panic = "abort"
linker-flavor = "ld.lld"

[[bin]]
name = "almost_metal"
path = "src/main.rs"